# python-package-template

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree
_sources/: index.rst.txt
_static/: documentation_options.js
docs/source/: conf.py
package/: __init__.py
