[metadata]
name = package #package
version = 0.0.1 #0.0.1
author = Author #Author
description = Description#short description
long_description = file: README.md
long_description_content_type = text/markdown
url = google.com #url
License = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9 # list the compatible python versions
install_requires =
    numpy # list all the dependancies